# gluon

./: .clog.toml  .gitignore  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Cross.toml  README.md  TUTORIAL.md  anatomy-of-a-gluon-program.html  api.rs  appveyor.yml  ast.rs  bors.toml  build.rs  cliff.toml  compiler.rs  dissecting-hello-world.html  embedding-api.html  extending-the-guessing-game-with-effects.html  getting-started.html  index.html  interner.rs  lexer.rs  main.rs  marshalling-types.html  metadata.html  modules.html  parser.rs  prelude.s  print.html  release.sh  repl.rs  rust-format-diff.sh  rust-format.sh  rustfmt.toml  scoped_map.rs  searchindex.js  searchindex.json  standard-types-and-functions.html  (+11 more)
.github/workflows/: ci.yml  release.yml  rust.yml
base/: Cargo.toml
base/src/: ast.rs  error.rs  fixed.rs  fnv.rs  gc.rs  instantiate.rs  interner.rs  kind.rs  lib.rs  macros.rs  merge.rs  metadata.rs  pos.rs  pretty_print.rs  resolve.rs  scoped_map.rs  serialization.rs  source.rs  symbol.rs  types.rs
base/src/types/: flags.rs  mod.rs  pretty_print.rs
base/tests/: compiletest.rs  types.rs
base/tests/compile-fail/: arena-1.rs  arena-2.rs
benches/: check.rs  function_call.rs  parser.rs  precompiled.rs  vm.rs
book/: book.toml
book/src/: SUMMARY.md  anatomy-of-a-gluon-program.md  dissecting-hello-world.md  embedding-api.md  extending-the-guessing-game-with-effects.md  getting-started.md  introduction.md  marshalling-types.md  metadata.md  modules.md  standard-types-and-functions.md  syntax-and-semantics.md  using-the-repl.md
c-api/: Cargo.toml
c-api/src/: lib.rs
check/: Cargo.toml
check/src/: completion.rs  error.rs  implicits.rs  instantiate.rs  kindcheck.rs  lib.rs  macros.rs  metadata.rs  recursion_check.rs  rename.rs  scoped_map.rs  substitution.rs  typ.rs  typecheck.rs  typed.rs  unify.rs  unify_type.rs
check/src/typecheck/: error.rs  generalize.rs  mod_type.rs
check/tests/: completion.rs  effect.rs  effects.rs  error_recovery.rs  fail.rs  forall.rs  functions.rs  gadt.rs  implicits.rs  metadata.rs  pass.rs  recursive.rs  row_polymorphism.rs  stack_overflow.rs  type_projection.rs  typecheck.rs
check/tests/snapshots/: fail__alias_mismatch.snap  fail__multiple_extra_parameters_error.snap  fail__no_inference_variable_in_error.snap  fail__unable_to_resolve_implicit_error_message.snap  fail__unification_error_with_empty_record_displays_good_error_message.snap
check/tests/support/: mod.rs
codegen/: Cargo.toml
codegen/src/: arena_clone.rs  ast_clone.rs  attr.rs  functor.rs  getable.rs  lib.rs  pushable.rs  shared.rs  trace.rs  traverseable.rs  userdata.rs  vm_type.rs
codegen/tests/: derive_getable.rs  derive_pushable.rs  derive_userdata.rs  derive_vm_type.rs  full.rs
codegen/tests/init/: mod.rs
completion/: Cargo.toml
completion/src/: lib.rs
completion/tests/: completion.rs  metadata.rs  signature_help.rs  suggest.rs
completion/tests/support/: mod.rs
doc/: Cargo.toml  build.rs
doc/src/: lib.rs  main.rs
doc/src/doc/: index.html  module.html  style.css
doc/tests/: doc.rs
examples/: 24.glu  24.rs  fib.rs  http.glu  http.rs  http_server.glu  http_types.glu  marshalling.rs
examples/http/: http.glu  main.rs  server.glu
examples/lisp/: lisp.glu  main.rs  parser.glu  types.glu
format/: Cargo.toml
format/src/: lib.rs  pretty_print.rs
format/tests/: pretty_print.rs  std.rs
parser/: Cargo.toml  build.rs
parser/benches/: parser.rs
parser/src/: grammar.lalrpop  grammar.rs  infix.rs  layout.rs  lexer.rs  lib.rs  str_suffix.rs  token.rs
parser/tests/: attributes.rs  basic.rs  error_handling.rs  indentation.rs  pretty_print.rs  stack_overflow.rs  types.rs
parser/tests/support/: mod.rs
repl/: Cargo.toml  build.rs
repl/src/: main.rs  repl.glu  repl.rs
repl/tests/: basic.rs  print.glu  rexpect.rs  tests.rs
scripts/: before_deploy.sh  cargo_install.sh  ci.sh  install.sh  install_cross.sh  install_mdbook.sh  install_sccache.sh  publish.sh  release.sh  sync_publish.sh  travis.sh  version.sh
src/: api.rs  ast.rs  c_api.rs  compiler.rs  compiler_pipeline.rs  doc.rs  fixed.rs  format_macro.rs  gc.rs  http.rs  import.rs  interner.rs  io.rs  kindcheck.rs  lens.rs  lexer.rs  lib.rs  lift_io.rs  main.rs  parser.rs  process.rs  query.rs  rand_bind.rs  regex_bind.rs  repl.rs  scoped_map.rs  std_lib.rs  substitution.rs  typecheck.rs  vm.rs  vm_lib.rs
src/doc/: module.html
src/std_lib/: env.rs  http.rs  io.rs  process.rs  random.rs  regex.rs  time.rs
std/: alternative.glu  applicative.glu  array.glu  assert.glu  bool.glu  byte.glu  category.glu  channel.glu  char.glu  cmp.glu  debug.glu  display.glu  disposable.glu  effect.glu  env.glu  float.glu  foldable.glu  free.glu  fs.glu  function.glu  functor.glu  group.glu  http.glu  identity.glu  indexable.glu  int.glu  io.glu  json.glu  lazy.glu  lazyt.glu  lens.glu  list.glu  map.glu  map.hs  monad.glu  monoid.glu  num.glu  option.glu  parser.glu  path.glu  (+31 more)
test/: Cargo.toml
tests/: api.rs  arithmetic.hs  array.rs  buffered_io.glu  buffered_io.rs  compiletest.rs  de.rs  debug.rs  doc.rs  error.rs  http.rs  inline.rs  io.rs  lazy.hs  limits.rs  main.rs  metadata.rs  parallel.rs  pattern_match.rs  regex_bind.rs  row_polymorphism.rs  safety.rs  serialization.rs  skeptic-template.md  skeptic-tests.rs  stack_overflow.rs  tutorial.rs  ui.rs  unrelated_type_error.glu  vm.rs
vm/: Cargo.toml  build.rs
vm/src/: api.rs  array.rs  channel.rs  compiler.rs  core.rs  debug.rs  derive.rs  dynamic.rs  field_map.rs  fixed.rs  future.rs  gc.rs  import.rs  import.rs.bk  interner.rs  lazy.rs  lib.rs  macros.rs  primitives.rs  reference.rs  serialization.rs  source_map.rs  stack.rs  thread.rs  types.rs  value.rs  vm.rs
vm/src/api/: de.rs  function.rs  json.rs  mac.rs  mod.rs  opaque.rs  record.rs  scoped.rs  ser.rs  serde.rs  typ.rs
vm/src/core/: costs.rs  dead_code.rs  grammar.lalrpop  grammar.rs  inline.rs  interpreter.rs  mod.rs  optimize.rs  pretty.rs  purity.rs
vm/src/derive/: deserialize.rs  eq.rs  mod.rs  serialize.rs  show.rs
vm/src/gc/: mutex.rs
(+95 files in other folders)
