[package]
name = "gluon"
version = "0.11.2" # GLUON
authors = ["Markus <marwes91@gmail.com>"]
build = "build.rs"
edition = "2018"

license = "MIT"

description = "A static, type inferred programming language for application embedding"
readme = "README.md"

homepage = "https://gluon-lang.org"
repository = "https://github.com/gluon-lang/gluon"
documentation = "https://docs.rs/gluon"

[badges]
travis-ci = { repository = "gluon-lang/gluon" }

[workspace]
members = ["c-api", "repl", "completion", "format", "doc", "codegen"]

[lib]
name = "gluon"
path = "src/lib.rs"

[dependencies]
gluon_base = { path = "base", version = "0.11.2" } # GLUON
gluon_check = { path = "check", version = "0.11.2" } # GLUON
gluon_parser = { path = "parser", version = "0.11.2" } # GLUON
gluon_codegen = { path = "codegen", version = "0.11.2" } # GLUON
gluon_vm = { path = "vm", version = "0.11.2", default-features = false } # GLUON
gluon_format = { path = "format", version = "0.11.2", default-features = false } # GLUON

log = "0.4"
quick-error = "1.0.0"
collect-mac = "0.1.0"
either = "1.0.0"
itertools = "0.8"
futures = "0.1.11"
codespan = "0.3"
codespan-reporting = "0.3"

serde = { version = "1.0.0", optional = true }
serde_state = { version = "0.4.0", optional = true }
serde_derive_state = { version = "0.4.0", optional = true }

# Binding crates
regex = { version = "1", optional = true }
# web
http = { version = "0.1", optional = true }
hyper = { version = "0.12", optional = true }
native-tls = { version = "0.2", optional = true }
tokio-tls = { version = "0.2", optional = true }
tokio-tcp = { version = "0.1", optional = true }

# Crates used in testing
compiletest_rs = { version = "0.3", optional = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rand = { version = "0.6", optional = true }
rand_xorshift = { version = "0.1", optional = true }

[build-dependencies]
gluon_base = { path = "base", version = "0.11.2" } # GLUON

itertools = "0.8"
little-skeptic = { version = "0.15.0", optional = true }
walkdir = "2"

[dev-dependencies]
criterion = "0.2"
tensile = "0.4"
collect-mac = "0.1.0"
env_logger = "0.6"
pretty_assertions = "0.5"
futures-cpupool = "0.1.8"
tokio = "0.1.7"
tokio-retry = "0.2"
walkdir = "2"
failure = "0.1"
failure_derive = "0.1"
tempfile = "3.0.4"

serde = "1.0.0"
serde_derive = "1.0.0"
serde_derive_state = { version = "0.4.0" }
serde_json = "1.0.0"
bincode = "1"

pulldown-cmark = "0.2"

gluon_completion = { path = "completion", version = "0.11.2" } # GLUON
gluon_codegen = { path = "codegen", version = "0.11.2" } # GLUON

[features]
default = ["regex", "random"]
random = ["rand", "rand_xorshift"]
serialization = ["serde", "serde_state", "serde_derive_state", "gluon_vm/serialization"]
web = ["hyper", "http", "native-tls", "tokio-tcp", "tokio-tls"]

docs_rs = ["serialization"]

test = ["serialization", "little-skeptic", "http", "web", "gluon_vm/test"]
nightly = ["compiletest_rs"]
test_nightly = ["test", "nightly"]

[[bench]]
name = "check"
harness = false

[[bench]]
name = "function_call"
harness = false

[[bench]]
name = "parser"
harness = false

[[bench]]
name = "precompiled"
harness = false

[[test]]
name = "main"
harness = false

[[example]]
name = "marshalling"
required-features = ["serialization"]
[[example]]
name = "http"
path = "examples/http/main.rs"
required-features = ["serialization", "web"]
[[example]]
name = "lisp"
path = "examples/lisp/main.rs"

[package.metadata.docs.rs]
features = ["docs_rs"]
