[package]
name = "gluon"
version = "0.17.2" # GLUON
authors = ["Markus <marwes91@gmail.com>"]
keywords = ["script", "scripting", "language"]
build = "build.rs"
edition = "2018"

license = "MIT"

description = "A static, type inferred programming language for application embedding"
readme = "README.md"

homepage = "https://gluon-lang.org"
repository = "https://github.com/gluon-lang/gluon"
documentation = "https://docs.rs/gluon"

[badges]
travis-ci = { repository = "gluon-lang/gluon" }

[workspace]
members = ["c-api", "repl", "completion", "format", "doc", "codegen"]

[lib]
name = "gluon"
path = "src/lib.rs"

[dependencies]
gluon_base = { path = "base", version = "0.17.2" } # GLUON
gluon_check = { path = "check", version = "0.17.2" } # GLUON
gluon_parser = { path = "parser", version = "0.17.2" } # GLUON
gluon_codegen = { path = "codegen", version = "0.17.2" } # GLUON
gluon_vm = { path = "vm", version = "0.17.2", default-features = false } # GLUON
gluon_format = { path = "format", version = "0.17.2", default-features = false } # GLUON

async-trait = "0.1"
log = "0.4"
quick-error = "1.0.0"
collect-mac = "0.1.0"
either = "1.0.0"
itertools = "0.9"
futures = { version = "0.3.1", default-features = false }
codespan = "0.9"
codespan-reporting = "0.9"
pin-project-lite = { version = "0.1", optional = true }
salsa = { version = "0.15.2", package = "gluon-salsa" }

serde = { version = "1.0.0", optional = true }
serde_state = { version = "0.4", optional = true }
serde_derive_state = { version = "0.4.7", optional = true }

tokio = { version = "0.2", features = ["stream", "sync", "rt-core"], optional = true }

# Binding crates
regex = { version = "1", optional = true }
# web
tower-service = { version = "0.3", optional = true }
http = { version = "0.2", optional = true }
hyper = { version = "0.13", optional = true, features = ["stream"] }
native-tls = { version = "0.2", optional = true }
tokio-native-tls = { version = "0.1", optional = true }

# Crates used in testing
compiletest_rs = { version = "0.5", optional = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rand = { version = "0.7", optional = true }
rand_xorshift = { version = "0.2", optional = true }

[build-dependencies]
gluon_base = { path = "base", version = "0.17.2" } # GLUON

itertools = "0.9"
little-skeptic = { version = "0.15.0", optional = true }
walkdir = "2"

[dev-dependencies]
anyhow = "1"
criterion = "0.3"
collect-mac = "0.1.0"
env_logger = "0.7"
expect-test = "1"
thiserror = "1"
insta = "0.16"
pretty_assertions = "0.6"
structopt = "0.3"
tempfile = "3.0.4"
tensile = { version = "0.6", features = ["tokio"] }
tokio = { version = "0.2", features = ["macros", "rt-core", "rt-threaded", "fs"] }
walkdir = "2"

serde = "1.0.0"
serde_derive = "1.0.0"
serde_derive_state = { version = "0.4.0" }
serde_json = "1.0.0"
bincode = "1"

pulldown-cmark = "0.7"

gluon_completion = { path = "completion", version = "0.17.2" } # GLUON
gluon_codegen = { path = "codegen", version = "0.17.2" } # GLUON

[features]
default = ["async", "regex", "random"]
async = ["tokio"]
random = ["rand", "rand_xorshift"]
serialization = ["serde", "serde_state", "serde_derive_state", "gluon_vm/serialization"]
web = ["async", "hyper", "http", "tower-service", "native-tls", "tokio/net", "tokio-native-tls", "pin-project-lite"]

docs_rs = ["serialization"]

test = ["serialization", "little-skeptic", "http", "web", "gluon_vm/test"]
nightly = ["compiletest_rs", "gluon_base/nightly"]
test_nightly = ["test", "nightly"]

[[bench]]
name = "check"
harness = false

[[bench]]
name = "function_call"
harness = false

[[bench]]
name = "precompiled"
harness = false

[[test]]
name = "main"
harness = false
required-features = ["serialization"]

[[example]]
name = "marshalling"
required-features = ["serialization"]

[[example]]
name = "http"
path = "examples/http/main.rs"
required-features = ["serialization", "web"]

[[example]]
name = "lisp"
path = "examples/lisp/main.rs"

[package.metadata.docs.rs]
features = ["docs_rs"]

[profile.bench]
debug = 2

[profile.release]
debug = 2
