[package]
name = "gluon_base"
version = "0.18.3"                        # GLUON
authors = ["Markus <marwes91@gmail.com>"]
edition = "2024"

license = "MIT"

description = "Basic type definitions and functions for the gluon programming language"

homepage = "https://gluon-lang.org"
repository = "https://github.com/gluon-lang/gluon"
documentation = "https://docs.rs/gluon"

[dependencies]
bitflags.workspace = true
hashbrown = "0.17.1"
log = "0.4.20"
quick-error = "2.0.1"
fnv = "1.0.7"
pretty.workspace = true
smallvec = "1.11.0"
collect-mac = "0.1.0"
anymap = { version = "0.12.1", optional = true }
itertools.workspace = true
ordered-float.workspace = true
codespan.workspace = true
codespan-reporting.workspace = true
either = "1.9.0"
vec_map = "0.8.2"
typed-arena = "2.0.2"

gluon_codegen = { version = "0.18.3", path = "../codegen" } # GLUON

serde = { version = "1.0.188", features = ["rc"], optional = true }
serde_state = { version = "0.4.8", features = ["rc"], optional = true }
serde_derive = { version = "1.0.188", optional = true }
serde_derive_state = { version = "0.4.10", optional = true }

# Crates used in testing
compiletest_rs = { version = "0.11", optional = true }

[dev-dependencies]
env_logger.workspace = true
pretty_assertions = "1.4.0"

[features]
serialization = [
    "serde",
    "serde_state",
    "serde_derive",
    "serde_derive_state",
    "anymap",
]
nightly = ["compiletest_rs"]
