[package]
name = "gluon_c-api"
version = "0.7.0" # GLUON
authors = ["Markus Westerlind <marwes91@gmail.com>"]

license = "MIT"

description = "C-api for gluon, a static, type inferred programming language for application embedding"

repository = "https://github.com/gluon-lang/gluon"
documentation = "https://docs.rs/gluon"

[lib]
crate-type = ["cdylib"]

[dependencies]
libc = "0.2.14"
gluon = { version = "0.7.0", path = "..", default-features = false } # GLUON

[features]
default = ["c_void", "gluon/default"]

test = ["gluon/test"]
nightly = ["gluon/nightly"]
skeptic = ["gluon/skeptic"]
c_void = []
