[package]
name = "gluon_c-api"
version = "0.7.1" # GLUON
authors = ["Markus Westerlind <marwes91@gmail.com>"]

license = "MIT"

description = "C-api for gluon, a static, type inferred programming language for application embedding"

repository = "https://github.com/gluon-lang/gluon"
documentation = "https://docs.rs/gluon"

[lib]
crate-type = ["cdylib"]

[dependencies]
gluon = { version = "0.7.1", path = ".." } # GLUON

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
libc = "0.2.14"

[features]
test = ["gluon/test"]
nightly = ["gluon/nightly"]
skeptic = ["gluon/skeptic"]
