[package]
name = "gluon_c-api"
version = "0.17.2" # GLUON
authors = ["Markus Westerlind <marwes91@gmail.com>"]
edition = "2018"

license = "MIT"

description = "C-api for gluon, a static, type inferred programming language for application embedding"

homepage = "https://gluon-lang.org"
repository = "https://github.com/gluon-lang/gluon"
documentation = "https://docs.rs/gluon"

[badges]
travis-ci = { repository = "gluon-lang/gluon" }

[lib]
crate-type = ["cdylib"]

[dependencies]
gluon = { version = "0.17.2", path = ".." } # GLUON
futures = "0.3"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
libc = "0.2.14"

[features]
test = ["gluon/test"]
nightly = ["gluon/nightly"]
