[package]
name = "gluon_check"
version = "0.11.2" # GLUON
authors = ["Markus <marwes91@gmail.com>"]
edition = "2018"

license = "MIT"

description = "The typechecker for the gluon programming language"

repository = "https://github.com/gluon-lang/gluon"
documentation = "https://docs.rs/gluon"

[dependencies]
collect-mac = "0.1.0"
log = "0.4"
itertools = "0.8"
union-find = "0.3.1"
pretty = "0.5"
smallvec = "0.6"
rpds = "0.5"
stable_deref_trait = "1"
quick-error = "1"

codespan = "0.3"
codespan-reporting = "0.3"

strsim = "0.8.0"

gluon_base = { path = "../base", version = "0.11.2" } # GLUON
gluon_codegen = { path = "../codegen", version = "0.11.2" } # GLUON

[dev-dependencies]
env_logger = "0.6"

gluon_parser = { path = "../parser", version = "0.11.2" } # GLUON
gluon_format = { path = "../format", version = ">=0.9" }

collect-mac = "0.1.0"
difference = "2"
pretty_assertions = "0.5"

