[package]
name = "gluon_check"
version = "0.17.2" # GLUON
authors = ["Markus <marwes91@gmail.com>"]
edition = "2018"

license = "MIT"

description = "The typechecker for the gluon programming language"

homepage = "https://gluon-lang.org"
repository = "https://github.com/gluon-lang/gluon"
documentation = "https://docs.rs/gluon"

[badges]
travis-ci = { repository = "gluon-lang/gluon" }

[dependencies]
collect-mac = "0.1.0"
ena = "0.14"
log = "0.4"
itertools = "0.9"
pretty = "0.10"
smallvec = "1"
rpds = "0.7"
quick-error = "1"

codespan = "0.9"
codespan-reporting = "0.9"

strsim = "0.10"

gluon_base = { path = "../base", version = "0.17.2" } # GLUON
gluon_codegen = { path = "../codegen", version = "0.17.2" } # GLUON

[dev-dependencies]
env_logger = "0.7"
insta = "0.16"

gluon_parser = { path = "../parser", version = "0.17.2" } # GLUON
gluon_format = { path = "../format", version = ">=0.9" }

collect-mac = "0.1.0"
difference = "2"
pretty_assertions = "0.6"

