[package]
name = "gluon_check"
version = "0.18.0" # GLUON
authors = ["Markus <marwes91@gmail.com>"]
edition = "2018"

license = "MIT"

description = "The typechecker for the gluon programming language"

homepage = "https://gluon-lang.org"
repository = "https://github.com/gluon-lang/gluon"
documentation = "https://docs.rs/gluon"

[badges]
travis-ci = { repository = "gluon-lang/gluon" }

[dependencies]
collect-mac = "0.1.0"
ena = "0.14.2"
log = "0.4.20"
itertools = "0.10.5"
pretty = "0.10.0"
smallvec = "1.11.0"
rpds = "0.10.0"
quick-error = "2.0.1"

codespan = "0.11.1"
codespan-reporting = "0.11.1"

strsim = "0.10.0"

gluon_base = { path = "../base", version = "0.18.0" } # GLUON
gluon_codegen = { path = "../codegen", version = "0.18.0" } # GLUON

[dev-dependencies]
env_logger = "0.9.3"
insta = "1.31.0"

gluon_parser = { path = "../parser", version = "0.18.0" } # GLUON
gluon_format = { path = "../format", version = ">=0.9" }

collect-mac = "0.1.0"
difference = "2.0.0"
pretty_assertions = "1.4.0"

