[package]
name = "gluon_codegen"
version = "0.18.0" # GLUON
authors = ["Markus <marwes91@gmail.com>"]

edition = "2018"

license = "MIT"

description = "Code generation macros for the gluon programming language"

repository = "https://github.com/gluon-lang/gluon"
documentation = "https://docs.rs/gluon"

[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0.109", features = ["extra-traits"] }
quote = "1.0.33"
proc-macro2 = "1.0.66"

[dev-dependencies]
env_logger = "0.9.3"
serde = "1.0.188"
serde_derive = "1.0.188"
gluon = { version = ">=0.8.0", path = "..", features = ["serialization"] }
gluon_vm = { version = ">=0.8.0", path = "../vm" }
