[package]
name = "gluon_codegen"
version = "0.18.2"                        # GLUON
authors = ["Markus <marwes91@gmail.com>"]

edition = "2021"

license = "MIT"

description = "Code generation macros for the gluon programming language"

repository = "https://github.com/gluon-lang/gluon"
documentation = "https://docs.rs/gluon"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0.118", features = ["extra-traits"] }
quote = "1.0.33"
proc-macro2 = "1.0.66"

[dev-dependencies]
env_logger.workspace = true
serde = "1.0.188"
serde_derive = "1.0.188"
gluon = { version = ">=0.8.0", path = "..", features = ["serialization"] }
gluon_vm = { version = ">=0.8.0", path = "../vm" }
