[package]
name = "gluon_completion"
version = "0.18.2"                        # GLUON
authors = ["Markus <marwes91@gmail.com>"]
edition = "2018"

license = "MIT"

description = "Auto-completion for the gluon programming language"

repository = "https://github.com/gluon-lang/gluon"
documentation = "https://docs.rs/gluon"

[dependencies]
either = "1.9.0"
itertools.workspace = true
walkdir = "2.3.3"
codespan.workspace = true

gluon_base = { path = "../base", version = "0.18.2" } # GLUON

[dev-dependencies]
collect-mac = "0.1.0"
env_logger.workspace = true
pretty_assertions = "1.4.0"
quick-error = "2.0.1"

gluon_check = { path = "../check", version = "0.18.2" }   # GLUON
gluon_parser = { path = "../parser", version = "0.18.2" } # GLUON
