[package]
name = "gluon_doc"
version = "0.18.0" # GLUON
authors = ["Markus Westerlind <marwes91@gmail.com>"]
edition = "2018"

license = "MIT"

description = "The documentation generator for the gluon programming language"

repository = "https://github.com/gluon-lang/gluon"
documentation = "https://docs.rs/gluon"

[dependencies]
clap = "2.33.3"
env_logger = "0.9.0"
anyhow = "1.0.44"
futures = "0.3.17"
handlebars = "4.1.3"
itertools = "0.10.1"
lazy_static = "1.4.0"
log = "0.4.14"
opener = "0.5.0"
pretty = "0.10.0"
pulldown-cmark = "0.8.0"
rayon = "1.5.1"
regex = "1.5.4"
structopt = "0.3.23"
walkdir = "2.3.2"

serde = "1.0.130"
serde_derive = "1.0.130"
serde_json = "1.0.68"

gluon = { version = "0.18.0", default-features = false, path = ".." } # GLUON
completion = { package = "gluon_completion", version = "0.18.0", path = "../completion" } # GLUON


[dev-dependencies]
cargo-deadlinks = "0.8.0"
