[package]
name = "gluon_format"
version = "0.12.0" # GLUON
authors = ["Markus <marwes91@gmail.com>"]
edition = "2018"

license = "MIT"

description = "Code formatting for the gluon programming language"

repository = "https://github.com/gluon-lang/gluon"
documentation = "https://docs.rs/gluon"

[dependencies]
log = "0.4"
pretty = "0.5"
itertools = "0.8"
codespan = "0.3"

gluon_base = { path = "../base", version = "0.12.0" } # GLUON

[dev-dependencies]
env_logger = "0.6"
difference = "2"
pretty_assertions = "0.6"
gluon_base = { path = "../base", version = "0.12.0" } # GLUON
gluon = { path = "..", version = ">=0.9" }

[features]
test = []
