[package]
name = "gluon_format"
version = "0.17.2" # GLUON
authors = ["Markus <marwes91@gmail.com>"]
edition = "2018"

license = "MIT"

description = "Code formatting for the gluon programming language"

repository = "https://github.com/gluon-lang/gluon"
documentation = "https://docs.rs/gluon"

[dependencies]
log = "0.4"
pretty = "0.10"
itertools = "0.9"
codespan = "0.9"

gluon_base = { path = "../base", version = "0.17.2" } # GLUON

[dev-dependencies]
difference = "2"
env_logger = "0.7"
expect-test = "1"
futures = "0.3.1"
pretty_assertions = "0.6"
tokio = { version = "0.2", features = ["macros", "rt-core"] }
walkdir = "2"

gluon_base = { path = "../base", version = "0.17.2" } # GLUON
gluon = { path = "..", version = ">=0.9" }

tensile = { version = "0.6", features = ["tokio"] }

[features]
test = []

[[test]]
name = "std"
harness = false
