[package]
name = "gluon_format"
version = "0.18.0" # GLUON
authors = ["Markus <marwes91@gmail.com>"]
edition = "2018"

license = "MIT"

description = "Code formatting for the gluon programming language"

repository = "https://github.com/gluon-lang/gluon"
documentation = "https://docs.rs/gluon"

[dependencies]
log = "0.4.20"
pretty = "0.10.0"
itertools = "0.10.5"
codespan = "0.11.1"

gluon_base = { path = "../base", version = "0.18.0" } # GLUON

[dev-dependencies]
difference = "2.0.0"
env_logger = "0.9.3"
expect-test = "1.4.1"
futures = "0.3.28"
pretty_assertions = "1.4.0"
tokio = { version = "1.32.0", features = ["macros"] }
walkdir = "2.3.3"

gluon_base = { path = "../base", version = "0.18.0" } # GLUON
gluon = { path = "..", version = ">=0.9" }

tensile = { version = "0.7", features = ["tokio"] }

[features]
test = []

[[test]]
name = "std"
harness = false
