[package]
name = "gluon_parser"
version = "0.18.0" # GLUON
authors = ["Markus <marwes91@gmail.com>"]
edition = "2018"

license = "MIT"

description = "The parser for the gluon programming language"

homepage = "https://gluon-lang.org"
repository = "https://github.com/gluon-lang/gluon"
documentation = "https://docs.rs/gluon"

build = "build.rs"

[dependencies]
collect-mac = "0.1.0"
itertools = "0.10.5"
quick-error = "2.0.1"
lalrpop-util = "0.19.12"
log = "0.4.20"
gluon_base = { path = "../base", version = "0.18.0" } # GLUON
ordered-float = "2.10.0"
codespan = "0.11.1"
codespan-reporting = "0.11.1"

[dev-dependencies]
criterion = "0.3.6"
env_logger = "0.9.3"
difference = "2.0.0"
pretty_assertions = "1.4.0"

[build-dependencies]
lalrpop = "0.19.12"

[[bench]]
name = "parser"
harness = false
