[package]
name = "gluon_parser"
version = "0.18.2"                        # GLUON
authors = ["Markus <marwes91@gmail.com>"]
edition = "2021"

license = "MIT"

description = "The parser for the gluon programming language"

homepage = "https://gluon-lang.org"
repository = "https://github.com/gluon-lang/gluon"
documentation = "https://docs.rs/gluon"

build = "build.rs"

[dependencies]
collect-mac = "0.1.0"
itertools.workspace = true
quick-error = "2.0.1"
lalrpop-util.workspace = true
log = "0.4.20"
gluon_base = { path = "../base", version = "0.18.2" } # GLUON
ordered-float.workspace = true
codespan.workspace = true
codespan-reporting.workspace = true

[dev-dependencies]
criterion = "0.8.2"
env_logger.workspace = true
difference = "2.0.0"
pretty_assertions = "1.4.0"

[build-dependencies]
lalrpop.workspace = true

[[bench]]
name = "parser"
harness = false
