[package]
name = "gluon_repl"
version = "0.7.1" # GLUON
authors = ["Markus Westerlind <marwes91@gmail.com>"]

license = "MIT"
description = "REPL for gluon. A static, type inferred programming language for application embedding"

repository = "https://github.com/gluon-lang/gluon"
documentation = "https://docs.rs/gluon_repl"

[[bin]]
name = "gluon"
path = "src/main.rs"
doc = false

[dependencies]

gluon = { version = "0.7.1", path = "..", features = ["serialization"] } # GLUON
gluon_vm = { version = "0.7.1", path = "../vm", features = ["serialization"] } # GLUON
gluon_completion = { path = "../completion", version = "0.7.1" } # GLUON
gluon_format = { version = "0.7.1", path = "../format" } # GLUON
gluon_doc = { version = "0.7.1", path = "../doc" } # GLUON

app_dirs = "1.0.0"
futures = "0.1.11"
futures-cpupool = "0.1"
tokio-core = "0.1"
tokio-signal = "0.1"
clap = "2.22.0"
log = "0.4"
env_logger = { version = "0.5", optional = true }
lazy_static = "0.2.0"
rustyline = "1.0.0"
walkdir = "2"
serde = "1"
serde_derive = "1"

[dev-dependencies]
pretty_assertions = "0.4"

[target.'cfg(unix)'.dev-dependencies]
rexpect = "0.3.0"

[features]
default = ["env_logger"]
