[package]
name = "gluon_repl"
version = "0.17.2" # GLUON
authors = ["Markus Westerlind <marwes91@gmail.com>"]
edition = "2018"

license = "MIT"
description = "REPL for gluon. A static, type inferred programming language for application embedding"

homepage = "https://gluon-lang.org"
repository = "https://github.com/gluon-lang/gluon"
documentation = "https://docs.rs/gluon"

[badges]
travis-ci = { repository = "gluon-lang/gluon" }

[[bin]]
name = "gluon"
path = "src/main.rs"
doc = false

[dependencies]
gluon = { version = "0.17.2", path = "..", features = ["serialization"] } # GLUON
gluon_vm = { version = "0.17.2", path = "../vm", features = ["serialization"] } # GLUON
gluon_completion = { path = "../completion", version = "0.17.2" } # GLUON
gluon_codegen = { path = "../codegen", version = "0.17.2" } # GLUON
gluon_format = { version = "0.17.2", path = "../format" } # GLUON
gluon_doc = { version = "0.17.2", path = "../doc" } # GLUON

app_dirs = { package = "app_dirs2", version = "2.3" }
anyhow = "1"
futures = "0.3"
tokio = { version = "0.2", features = ["rt-threaded", "rt-core", "macros", "signal"] }
clap = "2.22.0"
structopt = "0.3"
log = "0.4"
env_logger = { version = "0.7", optional = true }
lazy_static = "1"
rustyline = "=6.0.0"
walkdir = "2"
codespan = "0.9"
codespan-reporting = "0.9"
quick-error = "1.0.0"

serde = "1"
serde_derive = "1"

[target.'cfg(not(windows))'.dependencies]
ansi_term = "0.12"

[dev-dependencies]
pretty_assertions = "0.6"
tokio = { version = "0.2" }

[target.'cfg(unix)'.dev-dependencies]
rexpect = "0.3.0"

[features]
default = ["env_logger"]
test = []

