[package]
name = "gluon_repl"
version = "0.18.2"                                   # GLUON
authors = ["Markus Westerlind <marwes91@gmail.com>"]
edition = "2024"

license = "MIT"
description = "REPL for gluon. A static, type inferred programming language for application embedding"

homepage = "https://gluon-lang.org"
repository = "https://github.com/gluon-lang/gluon"
documentation = "https://docs.rs/gluon"

[[bin]]
name = "gluon"
path = "src/main.rs"
doc = false

[dependencies]
gluon = { version = "0.18.2", path = "..", features = [
    "serialization",
] } # GLUON
gluon_vm = { version = "0.18.2", path = "../vm", features = [
    "gluon_completion",
    "serialization",
] } # GLUON
gluon_completion = { path = "../completion", version = "0.18.2" } # GLUON
gluon_codegen = { path = "../codegen", version = "0.18.2" } # GLUON
gluon_format = { version = "0.18.2", path = "../format" } # GLUON
gluon_doc = { version = "0.18.2", path = "../doc" } # GLUON

app_dirs = { package = "app_dirs2", version = "2.5.5" }
anyhow = "1.0.75"
futures = "0.3.28"
tokio = { version = "1.32.0", features = [
    "rt-multi-thread",
    "macros",
    "signal",
] }
clap = { version = "4.6.1", features = ["derive"] }
log = "0.4.20"
env_logger = { workspace = true, optional = true }
lazy_static = "1.4.0"
rustyline = "18.0.1"
walkdir = "2.3.3"
codespan.workspace = true
codespan-reporting.workspace = true
quick-error = "2.0.1"

serde = "1.0.188"
serde_derive = "1.0.188"

[target.'cfg(not(windows))'.dependencies]
ansi_term = "0.12.1"

[dev-dependencies]
pretty_assertions = "1.4.0"
tokio = "1.32.0"

[target.'cfg(unix)'.dev-dependencies]
rexpect = "0.7.1"

[features]
default = ["env_logger"]
test = []
